syntax = "proto3";

package user_v1;

option go_package = "github.com/Danya97i/auth/pkg/user_v1;user_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "User API"
        version: "1.0.0"
    };

    host: "localhost:8080",
    schemes: HTTP,
    schemes: HTTPS,
    consumes: "application/json",
    produces: "application/json",
};

service UserV1 {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/user/v1/create"
            body: "*"
        };
    };

    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/user/v1"
        };
    };

    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            patch: "/user/v1"
            body: "*"
        };
    };

    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/user/v1"
        };
    };
}

enum Role {
    UNKNOWN = 0;
    ADMIN = 1;
    USER = 2;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UserInfo {
    string name = 1 [(validate.rules).string = {min_len: 2, max_len:15}];
    string email = 2 [(validate.rules).string.email = true];
    Role role = 3;
}

message CreateUserRequest {
    UserInfo info = 1;
    string password = 2;
    string password_confirm = 3;
}

message CreateUserResponse {
    int64 id = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    Role role = 3;
}

message DeleteUserRequest {
    int64 id = 1;
}
